refactor: remove unsed new line

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,5 @@
     <string name="service_stop">Arrêté</string>
     <string name="setting">Paramètres</string>
     <string name="country">Pays</string>
-    <string name="authentication">Authentification ?\n</string>
+    <string name="authentication">Authentification ?</string>
 </resources>
