--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="setting">Paramètres</string>
     <string name="country">Pays</string>
     <string name="authentication">Authentification ?</string>
+    <string name="saved">Enregistré</string>
 </resources>
