--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,5 @@
     <string name="dropdown_icon">Dropdown Icon</string>
     <string name="messages_not_exist">Aucun message</string>
     <string name="isLoading_message">Chargement...</string>
+    <string name="setting_saved">Enregistré</string>
 </resources>
